Work on homepage
Worked on project cards and styling of navbar

--- a/_posts/2022-10-07-project-2.md
+++ b/_posts/2022-10-07-project-2.md
@@ -1,10 +1,8 @@
 ---
-title: "Project 1"
-category: "project"
+title: "Project 2"
+category: project
 proj_img: "https://res.cloudinary.com/highereducation/image/upload/c_fill,w_1200,h_628,f_auto,fl_lossy,q_auto/v1/TheBestSchools.org/online-bachelors-project-management-hero.jpg"
 desc: "A small project"
 ---
 
-# Project 1
-
-A small project to succeed in some area in some field with certain clients that wish to achieve certain goals and revenue.
+# Hi, this is the second project
